# mtt-analyzer

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Procfile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
examples/: sample.csv
mtt_analyzer/: __init__.py  core.py  data.py  io.py  stats.py
static/: script.js  style.css
templates/: index.html
tests/: test_core.py  test_io.py  test_smoke.py  test_stats.py
